syntax = "proto3";

package systems.ajax.malov.input.reqreply.stock.get_all_man_sym.proto;

option java_multiple_files = true;

message GetAllManageableStockSymbolsRequest {

}

message GetAllManageableStockSymbolsResponse {
    repeated string symbols = 1;
}